<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navD_home"
        android:icon="@drawable/baseline_home_black_18dp"
        android:title="@string/txt_Acceuil" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_18dp"
            android:title="@string/txt_Acceuil" />

        <item
            android:id="@+id/recherche"
            android:icon="@drawable/baseline_search_black_18dp"
            android:title="@string/txt_Recherche" />
        <item
            android:id="@+id/mes_commandes"
            android:icon="@drawable/baseline_category_black_18dp"
            android:title="@string/txt_mes_commande" />


    </group>

    <item android:title="Profil">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/baseline_account_circle_black_18dp"
                    android:title="@string/txt_login" />

                <item
                    android:id="@+id/nav_profil"
                    android:icon="@drawable/baseline_search_black_18dp"
                    android:title="@string/txt_profil" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_login_black_18dp"
                    android:title="@string/txt_logout" />


            </group>
        </menu>
    </item>

    <item android:title="@string/txt_categotry">
        <menu>
            <group android:checkableBehavior="single">


            </group>
        </menu>
    </item>

</menu>