<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArticleDetailFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/product_details_img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/article_image_description" />

        <TextView
            android:id="@+id/product_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_details_img"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/fragment_article_product_detail"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/product_detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_detail_name"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/fragment_article_price"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_detail_price"
            android:layout_margin="5dp"
            android:text="@string/fragment_article_textview_text" />

        <TextView
            android:id="@+id/txt_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_detail_description"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/quantity"
            android:textSize="12sp"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/product_detail_numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_quantity"
            android:layout_centerInParent="true"

            android:gravity="center" />

        <Button
            android:id="@+id/btn_add_panier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_detail_numberPicker"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:drawableEnd="@drawable/baseline_add_shopping_cart_black_18dp"
            android:text="@string/txt_ajouter_au_panier"
            app:backgroundTint="@color/colorPrimary" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
