<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/panier_items_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/panier_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/un_nom_d_article"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/panier_product_qte"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/panier_product_qte_id"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:text="@string/nb"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/panier_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/panier_product_qte_id"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"

            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/prix_product_panier"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>