<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/store"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_logo_height"
        android:layout_marginTop="@dimen/main_logo_top"
        android:contentDescription="@string/main_logo_description"
        android:src="@drawable/coolshop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/app_slogan"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_logo_slogan_space"
        android:text="@string/notre_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        android:textSize="@dimen/main_slogan_text_size"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginStart="@dimen/main_button_horizontal_margin"
        android:layout_marginEnd="@dimen/main_button_horizontal_margin"
        android:layout_marginBottom="@dimen/main_button_connect_bottom"

        android:background="@drawable/input_design"
        android:onClick="goToLoginActivity"
        android:text="@string/txt_connexion"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_button_text_size"

        app:backgroundTint="@color/colorPrimary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/main_inscription"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginBottom="@dimen/main_buttons_space"
        android:layout_marginStart="@dimen/main_button_horizontal_margin"
        android:layout_marginEnd="@dimen/main_button_horizontal_margin"
        android:background="@drawable/input_design"
        android:onClick="goToInscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_login_btn"

        android:text="@string/txt_inscription"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_button_text_size"
        app:backgroundTint="@color/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>